@@ -7,6 +7,7 @@ SVN
                 Don't print anything by default if checksum fails
                 Decode all DDR2 SDRAM timing information
                 Add support for reading SPD data from hexdumps
+                Make command line parsing more robust
   decode-vaio: Private data might not be readable by non-root users
                Print the asset tag
                Fix the timestamp decoding
